<resources>
    <string name="app_name">Homework1</string>
    <string name="parol">Введите пароль</string>
    <string name="вход">Вход</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="vypolnitevhod">Выполните вход или зарегистрируйтесь.</string>
    <string name="email">Введите вашу почту</string>
    <string name="voyti">Войти</string>
    <string name="zabylparol">Забыл пароль?</string>
    <string name="najmi">Нажми сюда</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="procent">%</string>
    <string name="clear">AC</string>
    <string name="comma">,</string>
    <string name="plusMinus">+/-</string>
    <string name="enter">0</string>

</resources>





