<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0D0D"
    tools:context=".Calculator">


    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TableRow>
            <Button
                android:id="@+id/clear"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/clear"
                android:textSize="25sp"
                android:onClick="clear"
                android:background="@drawable/circle"
                />
            <Button
                android:id="@+id/plusMinus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/plusMinus"
                android:background="@drawable/circle"
                android:onClick="ButtonClick"
                android:textSize="25sp"
                />
            <Button
                android:id="@+id/procent"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/procent"
                android:onClick="percent"
                android:textSize="25sp"

                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/division"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/division"
                android:onClick="operations"
                android:textSize="25sp"
                android:textColor="@color/orange"
                android:backgroundTint="#FF9800"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/seven"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle"
                android:text="@string/seven"
                android:textColor="@color/grey"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/eight"
                android:textSize="25sp"
                android:onClick="ButtonClick"
                android:textColor="#F8F5F5"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/nine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/nine"
                android:textSize="25sp"
                android:onClick="ButtonClick"
                android:textColor="#F8F5F5"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/multiplication"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/multiplication"
                android:textColor="#F3F0F0"
                android:backgroundTint="#FF9800"
                android:onClick="operations"
                android:textSize="25sp"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/four"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/five"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/six"
                android:onClick="ButtonClick"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/minus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/minus"
                android:textSize="25sp"
                android:textColor="#F3F0F0"
                android:backgroundTint="#FF9800"
                android:onClick="operations"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/one"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/two"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/three"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/plus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/plus"
                android:textSize="25sp"
                android:textColor="#F3F0F0"
                android:onClick="operations"
                android:backgroundTint="#FF9800"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:backgroundTint="#333335"
                android:layout_weight="2"
                android:onClick="ButtonClick"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/comma"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/comma"
                android:textSize="25sp"
                android:textColor="#F8F5F5"
                android:onClick="ButtonClick"
                android:backgroundTint="#333335"
                android:background="@drawable/circle"/>
            <Button
                android:id="@+id/equal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/equal"
                android:textSize="25sp"
                android:textColor="#F3F0F0"
                android:backgroundTint="#FF9800"
                android:onClick="equal"
                android:background="@drawable/circle"/>
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/table"
        app:layout_constraintBottom_toTopOf="@id/table"
        android:gravity="right"
        android:text=""
        android:inputType="text"
        android:textSize="70sp"
        android:textColor="#F7F6F6"/>


</androidx.constraintlayout.widget.ConstraintLayout>